VZDEV/src/objects/CCPM_SMSSchedulesToBeRemoved__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_InsertedDateTime__c</fullName>
        <description>Time during which the record was inserted</description>
        <label>Inserted DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_SObjectType__c</fullName>
        <description>Indicated the type of object from which the record was inserted</description>
        <label>SObject Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_accountUniqueID__c</fullName>
        <label>Account Unique ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeID__c</fullName>
        <label>Store ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SMS Schedules To Be Removed</label>
    <nameField>
        <displayFormat>SMS2R-{00}</displayFormat>
        <label>SMS Schedules To Be Removed</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Schedules To Be Removed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>